testdata/baselines/reference/submodule/conformance/privateNameMethodAssignment.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
privateNameMethodAssignment.ts(4,14): error TS2803: Cannot assign to private method '#method'. Private methods are not writable.
privateNameMethodAssignment.ts(5,11): error TS2803: Cannot assign to private method '#method'. Private methods are not writable.
privateNameMethodAssignment.ts(6,11): error TS2803: Cannot assign to private method '#method'. Private methods are not writable.
privateNameMethodAssignment.ts(7,20): error TS2803: Cannot assign to private method '#method'. Private methods are not writable.
privateNameMethodAssignment.ts(9,11): error TS2803: Cannot assign to private method '#method'. Private methods are not writable.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== privateNameMethodAssignment.ts (5 errors) ====
    class A3 {
        #method() { };
        constructor(a: A3, b: any) {
            this.#method = () => {} // Error, not writable 
                 ~~~~~~~
!!! error TS2803: Cannot assign to private method '#method'. Private methods are not writable.
            a.#method = () => { }; // Error, not writable 
              ~~~~~~~
!!! error TS2803: Cannot assign to private method '#method'. Private methods are not writable.
            b.#method =  () => { } //Error, not writable 
              ~~~~~~~
!!! error TS2803: Cannot assign to private method '#method'. Private methods are not writable.
            ({ x: this.#method } = { x: () => {}}); //Error, not writable 
                       ~~~~~~~
!!! error TS2803: Cannot assign to private method '#method'. Private methods are not writable.
            let x = this.#method;
            b.#method++ //Error, not writable 
              ~~~~~~~
!!! error TS2803: Cannot assign to private method '#method'. Private methods are not writable.
        }
    }
    